Ensure to increase contrasts on buttons & colored links hover/active states
BS5 commits: 9181c84f0f4536aaeea3ec3157271dcc5d7d6e39

--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -7,7 +7,7 @@
   $background,
   $border,
   $color: color-contrast($background),
-  $hover-background: darken($background, 7.5%),
+  $hover-background: if($color == $color-contrast-light, darken($background, 7.5%), lighten($background, 7.5%)),
   $hover-border: transparent,
   $active-background: $background,
   $active-border: transparent,
